src-tauri/build_errors2.txt
   Compiling tag-all v0.1.0 (D:\tag_all\project\tauri-apps\tag-all\src-tauri)
warning: unused import: `ItemTag`
  --> src-tauri\src\domain\mod.rs:13:20
   |
13 | pub use tag::{Tag, ItemTag};
   |                    ^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `libsql::Connection`
 --> src-tauri\src\repository\item\item_hierarchy.rs:6:5
  |
6 | use libsql::Connection;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src-tauri\src\repository\item\item_hierarchy.rs:7:5
  |
7 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `tokio::sync::Mutex`
 --> src-tauri\src\repository\item\item_hierarchy.rs:8:5
  |
8 | use tokio::sync::Mutex;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `libsql::Connection`
 --> src-tauri\src\repository\item\item_positioning.rs:6:5
  |
6 | use libsql::Connection;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src-tauri\src\repository\item\item_positioning.rs:7:5
  |
7 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `tokio::sync::Mutex`
 --> src-tauri\src\repository\item\item_positioning.rs:8:5
  |
8 | use tokio::sync::Mutex;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `libsql::Connection`
 --> src-tauri\src\repository\item\item_workspace.rs:6:5
  |
6 | use libsql::Connection;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src-tauri\src\repository\item\item_workspace.rs:7:5
  |
7 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `tokio::sync::Mutex`
 --> src-tauri\src\repository\item\item_workspace.rs:8:5
  |
8 | use tokio::sync::Mutex;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `item_positioning::ItemPositioningOperations`
  --> src-tauri\src\repository\item\mod.rs:18:9
   |
18 | pub use item_positioning::ItemPositioningOperations;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `libsql::Connection`
 --> src-tauri\src\repository\tag\item_tag.rs:6:5
  |
6 | use libsql::Connection;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src-tauri\src\repository\tag\item_tag.rs:7:5
  |
7 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `tokio::sync::Mutex`
 --> src-tauri\src\repository\tag\item_tag.rs:8:5
  |
8 | use tokio::sync::Mutex;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `libsql::Connection`
 --> src-tauri\src\repository\tag\tag_hierarchy.rs:6:5
  |
6 | use libsql::Connection;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src-tauri\src\repository\tag\tag_hierarchy.rs:7:5
  |
7 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `tokio::sync::Mutex`
 --> src-tauri\src\repository\tag\tag_hierarchy.rs:8:5
  |
8 | use tokio::sync::Mutex;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `libsql::Connection`
 --> src-tauri\src\repository\tag\tag_positioning.rs:6:5
  |
6 | use libsql::Connection;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src-tauri\src\repository\tag\tag_positioning.rs:7:5
  |
7 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `tokio::sync::Mutex`
 --> src-tauri\src\repository\tag\tag_positioning.rs:8:5
  |
8 | use tokio::sync::Mutex;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `SearchableRepository`
  --> src-tauri\src\repository\mod.rs:19:51
   |
19 | pub use traits::{Repository, HierarchyRepository, SearchableRepository};
   |                                                   ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `DbState`
  --> src-tauri\src\repository\mod.rs:20:23
   |
20 | pub use db::{init_db, DbState};
   |                       ^^^^^^^

warning: unused import: `ItemRepository`
 --> src-tauri\src\commands\item_cmd.rs:7:58
  |
7 | use crate::repository::{Repository, HierarchyRepository, ItemRepository};
  |                                                          ^^^^^^^^^^^^^^

warning: unused import: `TagRepository`
 --> src-tauri\src\commands\tag_cmd.rs:7:37
  |
7 | use crate::repository::{Repository, TagRepository};
  |                                     ^^^^^^^^^^^^^

error[E0609]: no field `done` on type `&'life1 Item`
  --> src-tauri\src\repository\item\item_workspace.rs:74:27
   |
74 |                 if entity.done { 1 } else { 0 },
   |                           ^^^^ unknown field
   |
   = note: available fields are: `id`, `text`, `completed`, `item_type`, `memo` ... and 5 others

error[E0609]: no field `start_date` on type `&'life1 Item`
  --> src-tauri\src\repository\item\item_workspace.rs:81:24
   |
81 |                 entity.start_date.clone()
   |                        ^^^^^^^^^^ unknown field
   |
   = note: available fields are: `id`, `text`, `completed`, `item_type`, `memo` ... and 5 others

error[E0282]: type annotations needed
  --> src-tauri\src\repository\item\item_workspace.rs:70:9
   |
70 | / ...   conn.execute(
71 | | ...       "INSERT INTO items (text, done, item_type, parent_id, position, collapsed, workspace_id, current_count, start_date) VALU...
72 | | ...       libsql::params![
73 | | ...           entity.text.clone(),
...  |
84 | | ...   .await
   | |____________^ cannot infer type

error[E0282]: type annotations needed
  --> src-tauri\src\repository\item\item_workspace.rs:85:19
   |
85 |         .map_err(|e| DomainError::Internal(e.to_string()))?;
   |                   ^                        - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
85 |         .map_err(|e: /* Type */| DomainError::Internal(e.to_string()))?;
   |                    ++++++++++++

error[E0609]: no field `workspace_id` on type `Item`
  --> src-tauri\src\repository\item\item_workspace.rs:92:14
   |
92 |         item.workspace_id = workspace_id;
   |              ^^^^^^^^^^^^ unknown field
   |
   = note: available fields are: `id`, `text`, `completed`, `item_type`, `memo` ... and 5 others

warning: unused import: `HierarchyRepository`
 --> src-tauri\src\commands\item_cmd.rs:7:37
  |
7 | use crate::repository::{Repository, HierarchyRepository, ItemRepository};
  |                                     ^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0282, E0609.
For more information about an error, try `rustc --explain E0282`.
warning: `tag-all` (lib) generated 25 warnings
error: could not compile `tag-all` (lib) due to 5 previous errors; 25 warnings emitted
